--- a/project/myShoppingMall/package.json
+++ b/project/myShoppingMall/package.json
@@ -8,11 +8,14 @@
     "author": "jaehyeon2",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "cookie-parser": "^1.4.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
+        "fs": "0.0.1-security",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
         "mysql2": "^2.2.5",
         "nunjucks": "^3.2.3",
         "passport": "^0.4.1",
